Descripción de cambios: Inclusion de la clase "Fotos" para hacer dataBilding posteriormente.
Adicción de un comboBox con las ciudades en "Principal.xaml".
Programacion de eventos de eventos en la clase "Principal.xaml.cs".
Adiccion de metodo para posivilitar el envio de datos correctos segun la ciudad seleccionada en clase "Principal.xaml.cs".

Cambio colores y agregado de borde en la informacion de semana en la clase "ContentPage.xaml"

Adicion de Pagina vacia para la creaccion de el apartado información que consta de sus respectivas clases: "InformacionApp.xaml" y "InformacionApp.xaml.cs".

Cambios en la Clase ContentPage.xaml.cs:

Creaccion de evento OnNavigatedTo para capturar la ciudad seleccionada.

Puesta en marcha del Metodo Obtener.

Visualizacion de datos en la pagina de tiempo.

Inclusion de metodo getDatosActuales para obtener los datos con ayuda de los metodos siguientes tambien creados: getFranjaHoraria6, getFranjaHoraria12 y getHora.

--- a/SimpleWeather/SimpleWeather.csproj
+++ b/SimpleWeather/SimpleWeather.csproj
@@ -109,8 +109,15 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Clases\Fotos.cs" />
     <Compile Include="Paginas\ContentPage.xaml.cs">
       <DependentUpon>ContentPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Paginas\InformacionApp.xaml.cs">
+      <DependentUpon>InformacionApp.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Paginas\Principal.xaml.cs">
+      <DependentUpon>Principal.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -134,6 +141,14 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="Paginas\ContentPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Paginas\InformacionApp.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Paginas\Principal.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
