Pagina "NoDisponible" y conexion a internet.
Pagina "NoDisponible" Terminada, es una pagina simple de informacion que no se dispone de conexion a internet.
En la pagina "Principal" y en "ContentPage" se compueba si se puede acceder a los datos de AEMET y si es así accede continua, sino muestra la pagina de error "NoDisponible".

--- a/SimpleWeather/SimpleWeather.csproj
+++ b/SimpleWeather/SimpleWeather.csproj
@@ -116,6 +116,9 @@
     <Compile Include="Paginas\InformacionApp.xaml.cs">
       <DependentUpon>InformacionApp.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Paginas\NoDisponible.xaml.cs">
+      <DependentUpon>NoDisponible.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Paginas\Principal.xaml.cs">
       <DependentUpon>Principal.xaml</DependentUpon>
     </Compile>
@@ -145,6 +148,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Paginas\InformacionApp.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Paginas\NoDisponible.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
