--- a/SimpleWeather/SimpleWeather.csproj
+++ b/SimpleWeather/SimpleWeather.csproj
@@ -109,7 +109,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Clases\DatosTiempo.cs" />
     <Compile Include="Clases\Fotos.cs" />
+    <Compile Include="Clases\LecturaXml.cs" />
     <Compile Include="Paginas\ContentPage.xaml.cs">
       <DependentUpon>ContentPage.xaml</DependentUpon>
     </Compile>
