Municipios nuevas y mejora sintetización de código:
Se han añadido los municipios españoles con mas de 20000 habitantes.

Se ha creado una clase "Metodos.cs" la cual engloba varios metodos que utiliza la aplicación.

Metodos añadidos:

"getFranjaHoraria()" que antes se encontraba en "LecturaXml.cs"
"getHora()" que antes se encontraba en "LecturaXml.cs"
"Ciudad()" que antes se encontraba en "Principal.xaml.cs"(Además en "Ciudad()" se han añadido los municipios Españoles con mas de 20000 habitantes)
"Conexion()" que antes se encontraba en "Principal.xaml.cs"

Cambios en la clase "Principal.xaml" se han añadido los municipios Españoles de mas de 20000 habitantes.

--- a/SimpleWeather/SimpleWeather.csproj
+++ b/SimpleWeather/SimpleWeather.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Clases\DatosTiempo.cs" />
     <Compile Include="Clases\Fotos.cs" />
     <Compile Include="Clases\LecturaXml.cs" />
+    <Compile Include="Clases\Metodos.cs" />
     <Compile Include="Paginas\ContentPage.xaml.cs">
       <DependentUpon>ContentPage.xaml</DependentUpon>
     </Compile>
