--- a/SimpleWeather/SimpleWeather.csproj
+++ b/SimpleWeather/SimpleWeather.csproj
@@ -141,7 +141,9 @@
     <Content Include="Assets\14.png" />
     <Content Include="Assets\14n.png" />
     <Content Include="Assets\15.png" />
+    <Content Include="Assets\15n.png" />
     <Content Include="Assets\16.png" />
+    <Content Include="Assets\16n.png" />
     <Content Include="Assets\17.png" />
     <Content Include="Assets\17n.png" />
     <Content Include="Assets\23.png" />
@@ -149,7 +151,9 @@
     <Content Include="Assets\24.png" />
     <Content Include="Assets\24n.png" />
     <Content Include="Assets\25.png" />
+    <Content Include="Assets\25n.png" />
     <Content Include="Assets\26.png" />
+    <Content Include="Assets\26n.png" />
     <Content Include="Assets\33.png" />
     <Content Include="Assets\33n.png" />
     <Content Include="Assets\34.png" />
@@ -163,25 +167,33 @@
     <Content Include="Assets\44.png" />
     <Content Include="Assets\44n.png" />
     <Content Include="Assets\45.png" />
+    <Content Include="Assets\45n.png" />
     <Content Include="Assets\46.png" />
+    <Content Include="Assets\46n.png" />
     <Content Include="Assets\51.png" />
     <Content Include="Assets\51n.png" />
     <Content Include="Assets\52.png" />
     <Content Include="Assets\52n.png" />
     <Content Include="Assets\53.png" />
+    <Content Include="Assets\53n.png" />
     <Content Include="Assets\54.png" />
+    <Content Include="Assets\54n.png" />
     <Content Include="Assets\61.png" />
     <Content Include="Assets\61n.png" />
     <Content Include="Assets\62.png" />
     <Content Include="Assets\62n.png" />
     <Content Include="Assets\63.png" />
+    <Content Include="Assets\63n.png" />
     <Content Include="Assets\64.png" />
+    <Content Include="Assets\64n.png" />
     <Content Include="Assets\71.png" />
     <Content Include="Assets\71n.png" />
     <Content Include="Assets\72.png" />
     <Content Include="Assets\72n.png" />
     <Content Include="Assets\73.png" />
+    <Content Include="Assets\73n.png" />
     <Content Include="Assets\74.png" />
+    <Content Include="Assets\74n.png" />
     <Content Include="Assets\dia.png" />
     <Content Include="Assets\Logo.scale-100.png" />
     <Content Include="Assets\noche.png" />
